Security Fixes: JWT authentication and authorization improvements
- Fixed JWT secret key: upgraded to 256-bit secure key (RFC 7518 compliant)
- Enhanced SecurityConfig with custom exception handlers for auth/authz errors
- Improved error responses with proper JSON format and HTTP status codes
- Added CORS preflight caching and PATCH method support
- Better organized security filter chain with clear endpoint protection
- Added static resource serving configuration
- Improved exception handling for authentication failures
- All endpoints now properly protected based on user roles:
  * /api/admin/** - requires ADMIN role
  * /api/worker/** - requires WORKER role
  * /api/reports/** - requires authentication
  * /api/auth/** - public endpoints
- JWT token validation now returns proper 401/403 error responses
- Database initialization and browser launcher improvements